# libbraille-input

./: AUTHORS  Makefile.am  README.md  configure.ac
brailleinput/: Makefile.am  __init__.py  engine.py
built-in-braille-tables/: Makefile.am  configure.ac  languages.txt  make_makefile.py
built-in-braille-tables/arabic/: Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/bengali-bangladesh/: 5.txt  Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/bengali-indian/: 5.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/braille-patterns/: Makefile.am
built-in-braille-tables/croatian/: 46.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/czech/: Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/danish/: 46.txt  Makefile.am  middle.txt
built-in-braille-tables/dutch/: 6.txt  Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/emoji/: Makefile.am  beginning.txt
built-in-braille-tables/english/: 46.txt  Makefile.am  abbreviations.txt  beginning.txt  middle.txt
built-in-braille-tables/english-grade-2/: 45.txt  456.txt  5.txt  56.txt  6.txt  Makefile.am  abbreviations.txt  beginning.txt  middle.txt  middle_6.txt
built-in-braille-tables/finnish/: 46.txt  6.txt  Makefile.am  abbreviations.txt  middle.txt
built-in-braille-tables/french/: Makefile.am  abbreviations.txt  middle.txt
built-in-braille-tables/georgian/: Makefile.am  middle.txt
built-in-braille-tables/german/: Makefile.am  middle.txt  punctuations.txt
built-in-braille-tables/hindi/: 5.txt  Makefile.am  beginning.txt  middle.txt  middle_5.txt
built-in-braille-tables/hungarian/: 46.txt  6.txt  Makefile.am  beginning.txt
built-in-braille-tables/italian/: 46.txt  Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/kannada/: 5.txt  Makefile.am  beginning.txt  middle.txt  middle_5.txt
built-in-braille-tables/lithuanian/: 46.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/malay/: 45.txt  456.txt  5.txt  Makefile.am  abbreviations.txt  beginning.txt
built-in-braille-tables/malayalam/: 3.txt  4.txt  5.txt  Makefile.am  beginning.txt  middle.txt  middle_5.txt
built-in-braille-tables/nepali/: 5.txt  Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/norwegian/: Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/numerical/: Makefile.am
built-in-braille-tables/polish/: 46.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/portuguese/: 46.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/portuguese-brazil/: 3456.txt  Makefile.am  beginning.txt  middle.txt  punctuations.txt
built-in-braille-tables/romanian/: Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/russian/: Makefile.am  beginning.txt  punctuations.txt
built-in-braille-tables/sanskrit/: Makefile.am  punctuations.txt
built-in-braille-tables/serbian/: 46.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/slovak/: 6.txt  Makefile.am  middle.txt
built-in-braille-tables/spanish/: Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/swedish/: 3456.txt  6.txt  Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/tamil/: Makefile.am  beginning.txt  middle.txt
built-in-braille-tables/turkish/: 6.txt  Makefile.am  middle.txt
built-in-braille-tables/ukrainian/: Makefile.am  middle.txt  punctuations.txt
debian/: changelog  control  copyright  rules
liblouis-back-translation-tables/: Makefile.am  ar-ar-g1.utb  emoji.ctb  en-mathtext.ctb  hi-in-g1-abk.utb  hr-g1.ctb  ka-in-g1.utb  kannada.cti  language-table-dict.txt  ml-in-g1-abk.utb  ml-in-g2-abk.utb  ml-in-g3-abk.utb  sa-in-g1.utb  sr-g1.ctb
