# vim:set et ts=4:
#
# ibus-sharada-braille - The braille ibus engine
#
# Copyright (c) 2007-2011 Peng Huang <shawn.p.huang@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

# if not 1, append datestamp to the version number.

# OUTPUT files
AC_CONFIG_FILES(
Makefile
arabic/Makefile
bengali-bangladesh/Makefile
bengali-indian/Makefile
braille-patterns/Makefile
croatian/Makefile
czech/Makefile
danish/Makefile
dutch/Makefile
emoji/Makefile
english/Makefile
english-grade-2/Makefile
finnish/Makefile
french/Makefile
georgian/Makefile
german/Makefile
hindi/Makefile
hungarian/Makefile
italian/Makefile
kannada/Makefile
lithuanian/Makefile
malay/Makefile
malayalam/Makefile
nepali/Makefile
norwegian/Makefile
numerical/Makefile
polish/Makefile
portuguese/Makefile
portuguese-brazil/Makefile
romanian/Makefile
russian/Makefile
sanskrit/Makefile
serbian/Makefile
slovak/Makefile
spanish/Makefile
swedish/Makefile
tamil/Makefile
turkish/Makefile
ukrainian/Makefile

)

AC_OUTPUT
